apps/production/vern/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: vern
  labels:
    app: vern
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vern
  template:
    metadata:
      labels:
        app: vern
    spec:
      containers:
        - name: vern
          image: ghcr.io/pt-sinan-akbar/vern:3b93e4e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
